--- a/AIML.ipynb
+++ b/AIML.ipynb
@@ -419,7 +419,7 @@
         "        documents = splitter.split_documents(all_pages)\n",
         "\n",
         "        # 4. Continue with RAG setup using the combined documents\n",
-        "        os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyDSPFZbi9sdM49jpTgqSCloIuFPSVs3jCI\"\n",
+        "        os.environ[\"GOOGLE_API_KEY\"] = \"Auth_token\"\n",
         "\n",
         "        model = ChatGoogleGenerativeAI(model=\"gemini-2.5-flash\", temperature=0)\n",
         "        embeddings = GoogleGenerativeAIEmbeddings(model=\"models/text-embedding-004\")\n",
